[gd_scene load_steps=25 format=2]

[ext_resource path="res://Console.tscn" type="PackedScene" id=1]
[ext_resource path="res://Side Panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources Panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://3DMap/3DMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://GUI_Assets/Background.png" type="Texture" id=6]
[ext_resource path="res://PopupWindow.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fonts/Nova_Light_Ultra.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Fonts/LCARSText.tres" type="DynamicFont" id=16]
[ext_resource path="res://Fonts/Edge of the Galaxy.tres" type="DynamicFont" id=17]

[sub_resource type="Animation" id=1]
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("PlanetLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.04 ), Vector2( 0.12, 0.04 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlanetLabel/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("PlanetLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 0.12, 0.04 ), Vector2( 0, 0.04 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlanetLabel/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 1.05
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Window:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.375 ), Vector2( -0.1, 0.375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.575, 0.6, 0.825, 0.9, 0.975, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=4]
length = 1.275
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Window:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.525, 1.275 ),
"transitions": PoolRealArray( 1, 0.307786, 1 ),
"update": 0,
"values": [ Vector2( -0.1, 0.375 ), Vector2( -0.1, 0.375 ), Vector2( 1e-05, 0.375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.025, 0.125, 0.3, 0.375, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true, false ]
}

[sub_resource type="Animation" id=5]
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("PlanetLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.04 ), Vector2( 0.12, 0.04 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlanetLabel/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("PlanetLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 0.12, 0.04 ), Vector2( 0, 0.04 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlanetLabel/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=7]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=13]
resource_name = "in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("InspectPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1100, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "out"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("InspectPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1100, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("../PopupWindow:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -800, 246.898 ), Vector2( 460.494, 246.898 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../PopupWindow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=12]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("../WinLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../TurnsCounter:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.6, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../WinLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Side Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Resources Panel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../3DMap:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Console:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[node name="MainUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.20996
margin_top = 1.62064
margin_right = 1.20984
margin_bottom = 1.62067
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3DMap" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="3DMap"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
margin_bottom = -0.00012207
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="3DMap/ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true

[node name="3DMap" parent="3DMap/ViewportContainer/Viewport" instance=ExtResource( 4 )]

[node name="Window" type="TextureRect" parent="3DMap"]
margin_left = 1919.88
margin_top = 664.842
margin_right = 3839.88
margin_bottom = 1744.84
rect_scale = Vector2( 1e-05, 0.375 )
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetLabel" type="TextureRect" parent="3DMap"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -637.703
margin_right = 960.001
margin_bottom = 442.3
rect_scale = Vector2( 1e-05, 0.04 )
rect_pivot_offset = Vector2( 960, 540.002 )
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="3DMap/PlanetLabel"]
visible = false
margin_left = 621.039
margin_top = 52.6243
margin_right = 699.039
margin_bottom = 92.6243
rect_scale = Vector2( 8.33, 25 )
custom_fonts/font = ExtResource( 16 )
text = "Anaxes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="3DMap"]
anims/PlanetLabelIn = SubResource( 1 )
anims/PlanetLabelOut = SubResource( 2 )
anims/WindowIn = SubResource( 3 )
anims/WindowOut = SubResource( 4 )

[node name="AnimationPlayerP" type="AnimationPlayer" parent="3DMap"]
anims/PlanetLabelIn = SubResource( 5 )
anims/PlanetLabelOut = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="3DMap"]
visible = false
margin_left = 1721.98
margin_top = 677.92
margin_right = 1926.98
margin_bottom = 1054.92
mouse_filter = 0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sector" type="Button" parent="3DMap/VBoxContainer"]
margin_top = 11.0
margin_right = 205.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 7 )
text = "Sector 401"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sector2" type="Button" parent="3DMap/VBoxContainer"]
margin_top = 85.0
margin_right = 205.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 7 )
text = "Sector 402"
flat = true

[node name="Sector3" type="Button" parent="3DMap/VBoxContainer"]
margin_top = 159.0
margin_right = 205.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 7 )
text = "Sector 403"
flat = true

[node name="Sector4" type="Button" parent="3DMap/VBoxContainer"]
margin_top = 233.0
margin_right = 205.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 7 )
text = "Sector 404"
flat = true

[node name="Sector5" type="Button" parent="3DMap/VBoxContainer"]
margin_top = 307.0
margin_right = 205.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 7 )
text = "Sector 405"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Side Panel" parent="." instance=ExtResource( 2 )]
anchor_left = 0.618
anchor_top = 0.0972513
anchor_bottom = 0.690251
margin_left = 256.939
margin_top = -108.045
margin_right = 983.772
margin_bottom = 579.154
rect_scale = Vector2( 0.438, 0.438 )
mouse_filter = 2

[node name="InspectPanel" parent="Side Panel" index="0"]
margin_left = 1074.0
margin_right = 1114.0

[node name="Button" parent="Side Panel" index="6"]
margin_left = 1030.0
margin_right = 1083.0

[node name="Resources Panel" parent="." instance=ExtResource( 3 )]
anchor_left = 0.633
anchor_top = 0.718
margin_left = 220.619
margin_top = -301.71
margin_right = 929.811
margin_bottom = 129.091
rect_scale = Vector2( 0.438, 0.438 )
focus_mode = 1

[node name="InspectPanel" parent="Resources Panel" index="0"]
margin_left = 1100.0
margin_right = 1100.0

[node name="AnimationPlayer" parent="Resources Panel" index="1"]
anims/in = SubResource( 13 )
anims/out = SubResource( 14 )

[node name="Console" parent="." instance=ExtResource( 1 )]
margin_left = -2.64346
margin_top = 776.427
margin_right = -1456.64
margin_bottom = -59.5735
rect_scale = Vector2( 1.25, 1.25 )

[node name="MarginContainer" parent="Console/Background" index="0"]
margin_right = 466.003
margin_bottom = 244.0

[node name="SectionsContainer" parent="Console/Background/MarginContainer" index="0"]
margin_right = 446.0
margin_bottom = 223.0

[node name="History" parent="Console/Background/MarginContainer/SectionsContainer" index="0"]
margin_right = 426.0
margin_bottom = 143.0

[node name="ScrollContainer" parent="Console/Background/MarginContainer/SectionsContainer/History" index="0"]
margin_right = 426.0
margin_bottom = 143.0

[node name="InputContainer" parent="Console/Background/MarginContainer/SectionsContainer" index="1"]
margin_top = 163.0
margin_right = 426.0
margin_bottom = 203.0

[node name="HBoxContainer" parent="Console/Background/MarginContainer/SectionsContainer/InputContainer" index="0"]
margin_right = 426.0

[node name="Input" parent="Console/Background/MarginContainer/SectionsContainer/InputContainer/HBoxContainer" index="1"]
margin_right = 426.0

[node name="Autocomplete" parent="Console" index="1"]
visible = false
margin_top = 50.0
margin_bottom = 82.0

[node name="PopupWindow" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = -800.0
margin_top = 246.898
margin_right = -344.0
margin_bottom = 513.898
rect_scale = Vector2( 2, 2 )
mouse_filter = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
pitch_scale = 0.5

[node name="WinLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.5
margin_top = -85.0
margin_right = 114.5
margin_bottom = -3.0
custom_fonts/font = ExtResource( 17 )
text = "!Winner!"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnsCounter" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -9.0
margin_right = 175.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 175, 0 )
custom_fonts/font = SubResource( 8 )
text = "_____ defeated _____ in __ turns..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 9 )
anims/FadeOut = SubResource( 10 )
anims/PopupSwing = SubResource( 11 )
anims/WinScreen = SubResource( 12 )

[connection signal="pressed" from="Side Panel/InspectPanel/PlanetsButton-" to="." method="_on_PlanetsButton_pressed"]
[connection signal="pressed" from="Side Panel/InspectPanel/ShipsButton-" to="." method="_on_ShipsButton_pressed"]
[connection signal="value_changed" from="Side Panel/Settings/PanSensSlider" to="." method="_on_PanSensSlider_value_changed"]
[connection signal="value_changed" from="Side Panel/Settings/ZoomSensSlider" to="." method="_on_ZoomSensSlider_value_changed"]
[connection signal="pressed" from="Side Panel/MenuButton-" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Side Panel/SettingsButton-" to="." method="_on_SettingsButton_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="3DMap/ViewportContainer/Viewport/3DMap"]
[editable path="Side Panel"]
[editable path="Resources Panel"]
[editable path="Console"]
